src/modules/base/primitiveActivityTimelineItem/primitiveActivityTimelineItem.css
.slds-timeline__icon.avonni-timeline-item__bullet {
    display: inline-block;
    position: relative;
    margin-top: 7px;
    margin-left: 8px;
    margin-right: 8px;
    width: 12px;
    height: 12px;
    border-radius: 100px;
    background-color: #c9c7c5;
    box-shadow: 0 0 0 2px white;
}

.avonni-primitive-activity-timeline-item__bullet-xx-small {
    left: -5px;
}

.avonni-primitive-activity-timeline-item__bullet-x-small {
    left: -4px;
}

.avonni-primitive-activity-timeline-item__bullet-medium {
    left: 3.95px;
}

.avonni-primitive-activity-timeline-item__bullet-large {
    left: 12px;
}

.slds-timeline__icon.avonni-timeline-item__bullet.avonni-timeline-item__active-bullet::after {
    position: absolute;
    content: '';
    top: -4px;
    left: -4px;
    width: 16px;
    height: 16px;
    border-radius: 100px;
    background-color: white;
    border: var(--lwc-colorBorderRowSelectedHover, #1b96ff) solid 4.5px;
    box-shadow: 0 0 0 4px white;
}

.avonni-activity-timeline-item-header-date {
    margin-left: auto;
    max-width: 100%;
}

.slds-timeline__item_expandable:before {
    content: '';
    background: var(
        --line-color,
        var(--avonni-activity-timeline-item-color-background, #c9c7c5)
    );
    height: 100%;
    width: 2px;
    position: absolute;
    top: 11px;
    bottom: 0;
    margin-left: 1px;
}

.avonni-primitive-activity-timeline-item__action-icon_xx-small {
    margin: -0.1rem 0 0 -0.5rem;
    transform: scale(0.55);
}

.avonni-primitive-activity-timeline-item__action-icon_x-small {
    margin: -0.15rem 0 0 -0.5rem;
    transform: scale(0.6);
}

.avonni-primitive-activity-timeline-item__action-icon_small {
    margin: -0.3rem 0 0 -0.5rem;
    transform: scale(0.7);
}

.avonni-primitive-activity-timeline-item__action-icon_medium {
    margin: -0.5rem 0 0 -0.5rem;
    transform: scale(0.8);
}

.avonni-primitive-activity-timeline-item__action-icon_large {
    margin: -0.7rem 0 0 -0.5rem;
    transform: scale(0.85);
}

.avonni-primitive-activity-timeline-item__icon_xx-small {
    margin-top: 0.4rem;
}

.avonni-primitive-activity-timeline-item__icon_x-small {
    margin-top: 0.35rem;
}

.avonni-primitive-activity-timeline-item__icon_small {
    margin-top: 0.2rem;
}

.avonni-primitive-activity-timeline-item__icon_xx-small:before {
    left: 1.95rem;
}

.avonni-primitive-activity-timeline-item__icon_x-small:before {
    left: 2.125rem;
}

.avonni-primitive-activity-timeline-item__icon_small:before {
    left: 2.25rem;
}

.avonni-primitive-activity-timeline-item__icon_medium:before {
    left: 2.5rem;
}

.avonni-primitive-activity-timeline-item__icon_large:before {
    left: 3rem;
}

.avonni-primitive-activity-timeline-item__no-fields_margin {
    margin-left: 24px;
}

.avonni-primitive-activity-timeline-item___no-vertical-bar-margin {
    margin-left: -14px;
}

.avonni-primitive-activity-timeline-item__fields-container {
    background-color: var(
        --avonni-activity-timeline-item-fields-color-background,
        var(--lwc-colorBackground, #f3f3f3)
    );
    border-radius: var(
        --avonni-activity-timeline-item-fields-radius-border,
        0.25rem
    );
    border-width: var(
        --avonni-activity-timeline-item-fields-sizing-border,
        1px
    );
    border-style: var(
        --avonni-activity-timeline-item-fields-styling-border,
        solid
    );
    border-color: var(
        --avonni-activity-timeline-item-fields-color-border,
        #c9c9c9
    );
    padding-right: var(
        --avonni-activity-timeline-item-fields-spacing-inline,
        1rem
    );
    padding-left: var(
        --avonni-activity-timeline-item-fields-spacing-inline,
        1rem
    );
    padding-bottom: var(
        --avonni-activity-timeline-item-fields-spacing-block,
        1rem
    );
    --avonni-layout-item-spacing-block-start: var(
        --avonni-activity-timeline-item-fields-spacing-block,
        1rem
    );
}

.avonni-primitive-activity-timeline-item__description {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: var(
        --avonni-activity-timeline-item-description-line-clamp,
        3
    );
}

.slds-timeline__icon {
    border-color: transparent;
}

/* Added extra classes for those selectors to take priority */
.slds-media__body
    > .slds-timeline__trigger.avonni-primitive-activity-timeline-item__body-highlight.slds-grid {
    background-color: var(
        --avonni-primitive-activity-timeline-item-body-color-background-highlight,
        var(--slds-g-color-neutral-base-90, #e5e5e5)
    );
}

.slds-timeline__trigger.avonni-primitive-activity-timeline-item__body:hover {
    background-color: var(
        --avonni-primitive-activity-timeline-item-body-color-background-hover,
        var(--slds-g-color-neutral-base-95, #f3f3f3)
    );
}

